--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
   <span>Mercado</span>
+  <span style="flex: 1 1 auto;"></span>
   <button mat-button (click)="loginLogout()">{{isLoggedIn()?'Log out':'Login'}}</button>
   <span *ngIf="isLoggedIn()">{{getUser().displayName}}</span>
 </mat-toolbar>
