--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<mat-grid-list [cols]="colCount" rowHeight="250px">
+  <mat-grid-tile *ngFor="let card of cards">
+    <app-product-card style="width: 100%; padding: 2px;"></app-product-card>
+  </mat-grid-tile>
+</mat-grid-list>
