--- a/src/app/product/product-card/product-card.component.html
+++ b/src/app/product/product-card/product-card.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <img src="https://www.eho.eu/wp-content/uploads/2018/10/jabolko_novo.jpg" width="100"/>
-  <p>Apples</p>
-  <p>Description here</p>
+  <p>{{product.name}}</p>
+  <p>{{product.description}}</p>
+  <p>{{product.price | currency}}</p>
   <button mat-raised-button color="primary">Something</button>
 </mat-card>
