--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -24,7 +24,7 @@
       : "You don't have an account? Register."
   }}
 </p>
-<div mat-dialog-actions>
+<div mat-dialog-actions style="justify-content: flex-end;">
   <button mat-button mat-dialog-close>Cancel</button>
   <button mat-button cdkFocusInitial (click)="login()">Ok</button>
 </div>
