Users credit,buy products

--- a/src/app/product/product-card/product-card.component.html
+++ b/src/app/product/product-card/product-card.component.html
@@ -3,5 +3,5 @@
   <p>{{product.name}}</p>
   <p>{{product.description}}</p>
   <p>{{product.price | currency}}</p>
-  <button mat-raised-button color="primary">Something</button>
+  <button mat-raised-button color="primary" (click)="buyProduct()">Buy</button>
 </mat-card>
