--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,4 +1,7 @@
 <mat-grid-list [cols]="colCount" rowHeight="300px">
+
+<!--  <stockGraphic>-->
+
   <mat-grid-tile *ngFor="let product of products">
     <app-product-card [product]="product" style="width: 100%; padding: 2px;"></app-product-card>
   </mat-grid-tile>
