--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
-  <span routerLink="/" style="padding: 0 6px; cursor: pointer;">Mercado</span>
-  <span *ngIf="isLoggedIn()" routerLink="/product" style="padding: 0 6px; cursor: pointer;">My Products</span>
+  <span routerLink="/" style="padding: 0 6px; cursor: pointer;">Market</span>
+  <span *ngIf="isLoggedIn()" routerLink="/product" style="padding: 0 6px; cursor: pointer;">My Transactions</span>
   <span style="flex: 1 1 auto;"></span>
   <span style="font-size: 12px; margin-right: 4px;">{{getUserName()}}</span>
   <img
